# pymake314

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  tests.py  tests_double_colon.py  tests_gnu.py  tests_order_only.py  tests_static_pattern.py
pymake/: __init__.py  __main__.py  executor.py  model.py  parser.py  resolver.py
